# ParProc

./: .gitignore  CMakeLists.txt  asdf  file1  file2  file3  helper.txt  helper2.txt  lab  main.c  main.cpp  tester.sh  еьз  еьз.txt
BioInspired/: lab1.cpp
BioInspired/HW1/: hw1.c  some.txt
BioInspired/ref/: all  c.csv  gc.csv  in.csv  plot.py  pso_c1c2.c  pso_global_vs_local.c  pso_inertia.c  pso_swarm_size.c  pso_vmax.c  sw.csv
Lab1/: lab1.c  lab1_forshow.c  lab1_size_dependency.c
Lab2/: lab2.c  lab2_add.c  lab2_forshow.c
Lab2notmine/: lab2(1).c  lab2.c
Lab3/: asfd  lab3.c  lab3_2it.c  lab3_add.c  lab3_forshow.c  lab3_forshow2.c  test.c  test2.c
Lab4/: lab4_add.c  lab4_forshow.c
Lab5/: lab5.c
Lab6/: lab6.c  lab60.c  lab60_mp.c  lab60_mp2.c  lab60_mp2_show.c  lab66.c  lab6_single.c  lab6_single2 copy.c  lab6_single2.c  lab6d0.c
Lab6notmine/: lab6.c
Lab7/: lab5.c  lab5.cpp  lab5_prev.c  lab7.c  lab7_single.c
Lab7Pete/: lab7.cpp
QOI/: qoi.h  qoi2.h  qoi_bench.c  qoi_conv.c
QOI_luz/: qoi.h  qoi_bench.c
QOI_simple/: qoi.h  qoi_conv.c
hash_collision/: data.txt  data_sha10.txt  data_sha11.txt  data_sha12.txt  data_sha13.txt  data_sha14.txt  data_sha15.txt  data_sha16.txt  data_sha17.txt  data_sha18.txt  data_sha19.txt  data_sha20.txt  data_sha21.txt  data_sha22.txt  data_sha23.txt  data_sha24.txt  data_sha8.txt  data_sha9.txt  main.cpp
l/: lab7.cpp
lab7anton/: lab7.c  lab7.cpp  res.txt
