cmake_minimum_required(VERSION 3.27)


#find_package(MPI REQUIRED)
##
#
#find_package(OpenMP REQUIRED)
#add_executable(Lab7 l/lab7.cpp)

#if (OPENMP_FOUND)
#    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
#    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
#    target_link_libraries(Lab7 PRIVATE ${OpenMP_CXX_LIBRARIES})
#endif ()


#target_link_libraries(Lab7 PRIVATE MPI::MPI_CXX)

set(CMAKE_C_STANDARD 23)
#set(CMAKE_CXX_STANDARD 20)

project(ParProc C)
#project(ParProc CXX)
#set(MPI_C_COMPILER "/opt/homebrew/bin/mpicc")
find_package(OpenMP REQUIRED)
#message(STATUS "${MPI_INCLUDE_PATH}")
#message(STATUS "${O}")
find_package(MPI REQUIRED)
#find_package(PNG REQUIRED)
#find_package(OpenSSL REQUIRED)
#include_directories(${OPENSSL_INCLUDE_DIR})
#include_directories(SYSTEM ${MPI_INCLUDE_PATH})
#
#add_executable(ParProc main.c)
#add_executable(hash_collision hash_collision/main.cpp)
#add_executable(ParProc main.cpp)
#add_executable(Lab4 Lab4/lab4_forshow.c)
#add_executable(Lab6single2 Lab6/lab6_single2.c)
#add_executable(Lab6single2_wtf Lab6/lab6_single2\ copy.c)
#add_executable(Lab6single Lab6/lab6_single.c)
#add_executable(Lab6 Lab6/lab60_mp2_show.c)
#add_executable(Lab6not Lab6notmine/lab6.c)
#add_executable(Lab7anton lab7anton/lab7.cpp)
#add_executable(Lab7 Lab7/lab7.c)
#add_executable(Lab7pete Lab7Pete/lab7.cpp)
#add_executable(qoi QOI/qoi_conv.c)
#add_executable(qoi_bench QOI/qoi_bench.c)
#add_executable(qoi_bench_luz QOI_luz/qoi_bench.c)
#add_executable(qoi_luz QOI_luz/qoiconv.c)
#add_executable(qoi_simple QOI_simple/qoi_conv.c)
add_executable(HW1 BioInspired/HW1/hw1.c)
add_executable(pso_gl BioInspired/ref/pso_global_vs_local.c)
add_executable(pso_in BioInspired/ref/pso_inertia.c)
add_executable(pso_sw BioInspired/ref/pso_swarm_size.c)
add_executable(pso_c BioInspired/ref/pso_c1c2.c)
add_executable(pso_v BioInspired/ref/pso_vmax.c)


if (OpenMP_C_FOUND)
    #    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
#    target_link_libraries(hash_collision PRIVATE ${OpenMP_CXX_LIBRARIES})
    target_link_libraries(HW1 PRIVATE ${OpenMP_C_LIBRARIES})
    target_link_libraries(pso_gl PRIVATE ${OpenMP_C_LIBRARIES})
    target_link_libraries(pso_in PRIVATE ${OpenMP_C_LIBRARIES})
    target_link_libraries(pso_sw PRIVATE ${OpenMP_C_LIBRARIES})
    target_link_libraries(pso_c PRIVATE ${OpenMP_C_LIBRARIES})
    target_link_libraries(pso_v PRIVATE ${OpenMP_C_LIBRARIES})
    #message(WARNING ${CMAKE_C_FLAGS})
    #    target_link_libraries(Lab7 PRIVATE ${OpenMP_C_LIBRARIES})
    #    target_link_libraries(Lab7pete PRIVATE ${OpenMP_CXX_LIBRARIES})
    #    target_link_libraries(Lab7anton PRIVATE ${OpenMP_CXX_LIBRARIES})
    #        target_link_libraries(qoi PRIVATE ${OpenMP_C_LIBRARIES})
    #        target_link_libraries(qoi_bench PRIVATE ${OpenMP_C_LIBRARIES})
    #    target_link_libraries(qoi_bench_luz PRIVATE ${OpenMP_C_LIBRARIES})
    #    target_link_libraries(qoi_luz PRIVATE ${OpenMP_C_LIBRARIES})
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
#    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif ()

#target_link_libraries(hash_collision ${OPENSSL_LIBRARIES})
#if (OPENSSL_FOUND)
#    target_link_libraries(hash_collision PRIVATE OpenSSL:Crypto OpenSSL:SSL)
#endif ()

#target_link_libraries(qoi_bench PRIVATE ${PNG_LIBRARY})
#target_link_libraries(qoi_bench_luz PRIVATE ${PNG_LIBRARY})

#target_link_libraries(Lab7 PRIVATE MPI::MPI_C)
#target_link_libraries(Lab6 PRIVATE MPI::MPI_C)
#target_link_libraries(Lab6not PRIVATE MPI::MPI_C)
#target_link_libraries(ParProc PRIVATE MPI::MPI_C)
#target_link_libraries(Lab7anton PRIVATE MPI::MPI_CXX)
#target_link_libraries(Lab7pete PRIVATE MPI::MPI_CXX)

